Skip to content

"vlc.exe -f video.avi" doesn't truly start in fullscreen

"vlc.exe -f video.avi" starts in window mode and then immediately switches to fullscreen. Still, the window is visible shortly and the behavior is not expected. Can this maybe be fixed that it really starts in fullscreen mode? Or otherwise the help could be changed from: "Start video in fullscreen (off by default)" to "Switch video to fullscreen after start (off by default)" ;-)

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information