XCB/window: create window in fullscreen state (refs #2685)

This avoids visual glitches when fullscreen mode is already enabled
when the video window is created.